lm knowledge recall by es8.x